--- a/LibraryInterfaces/Library.csproj
+++ b/LibraryInterfaces/Library.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Impl\Entities\Book.cs" />
+    <Compile Include="Impl\Exceptions\IllegalStateTransitionException.cs" />
     <Compile Include="Interfaces\Controls\BorrowCTLConstants.cs" />
     <Compile Include="Interfaces\Controls\IBorrowCTL.cs" />
     <Compile Include="Interfaces\Entities\BookConstants.cs" />
