--- a/WindowsFormsApplication1/LibraryBorrowBook.csproj
+++ b/WindowsFormsApplication1/LibraryBorrowBook.csproj
@@ -44,16 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BorrowBook.cs">
+    <Compile Include="BorrowBookUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BorrowBook.Designer.cs">
-      <DependentUpon>BorrowBook.cs</DependentUpon>
+    <Compile Include="BorrowBookUI.Designer.cs">
+      <DependentUpon>BorrowBookUI.cs</DependentUpon>
     </Compile>
     <Compile Include="BorrowBookUC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="BorrowBook.resx">
-      <DependentUpon>BorrowBook.cs</DependentUpon>
+    <EmbeddedResource Include="BorrowBookUI.resx">
+      <DependentUpon>BorrowBookUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
