--- a/LibraryInterfaces/Library.csproj
+++ b/LibraryInterfaces/Library.csproj
@@ -42,9 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Impl\Controls\BorrowCTL.cs" />
+    <Compile Include="Impl\Daos\BookDAO.cs" />
+    <Compile Include="Impl\Daos\LoanDAO.cs" />
+    <Compile Include="Impl\Daos\MemberDAO.cs" />
     <Compile Include="Impl\Entities\Book.cs" />
+    <Compile Include="Impl\Entities\Loan.cs" />
     <Compile Include="Impl\Entities\Member.cs" />
-    <Compile Include="Impl\Exceptions\IllegalStateException.cs" />
+    <Compile Include="Impl\Helpers\BookHelper.cs" />
+    <Compile Include="Impl\Helpers\LoanHelper.cs" />
+    <Compile Include="Impl\Helpers\MemberHelper.cs" />
     <Compile Include="Interfaces\Controls\BorrowCTLConstants.cs" />
     <Compile Include="Interfaces\Controls\IBorrowCTL.cs" />
     <Compile Include="Interfaces\Daos\IBookDAO.cs" />
