--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\LibraryInterfaces\packages.config" />
-  <repository path="..\LibraryTests\packages.config" />
+  <repository path="..\BorrowBook\packages.config" />
 </repositories>
