--- a/LibraryTests/LibraryTests.csproj
+++ b/LibraryTests/LibraryTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="TestBook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestMember.cs" />
+    <Compile Include="TestBookDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibraryInterfaces\Library.csproj">
